# liftesch

./: .gitignore  Makefile  README.md  idea.txt  meson.build
docs/: Doxyfile
output/: erkezok.txt
src/: adat.c  adat.h  elvono.c  grafika.c  grafika.h  liftmat.c  liftmat.h
